syntax = "proto3";

package chat;

import "google/protobuf/empty.proto";

service ChatService {
    rpc PublishMessage(Message) returns (Ack);
    rpc ReceiveMessage(Message) returns (Ack);
    rpc ChatStream(stream Message) returns (stream Message);
    rpc Join(google.protobuf.Empty) returns (JoinResponse);
    rpc Leave(LeaveRequest) returns (LeaveResponse);
}

message Message {
    int32 userID = 1;
    int32 timestamp = 2;
    string body = 3;
}

message Ack { // Acknowledgement
    string message = 1;
}

message JoinResponse {
    string message = 1;
    int32 userID = 2;
}

message LeaveRequest {
    string user = 1;
}

message LeaveResponse {
    string message = 1;
    int32 timestamp = 2;
}

